# Multi-Tenant-Oganization-Manager

./: .env  .env.docker  .gitignore  DB-Backup.sql  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: audit.py  db.py  dependencies.py  main.py  models.py  schemas.py  security.py  seed.py  settings.py
app/routers/: audit_logs.py  auth.py  items.py  organizations.py
org_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_auth.py  test_org_isolation.py  test_rbac.py
